--- a/apprunner.yaml
+++ b/apprunner.yaml
@@ -7,5 +7,9 @@ build:
     - pip install -r requirements.txt
 run:
   command: python app.py
+  env: MY_STRING
   network:
     port: 8000
+env:
+  - name: MY_STRING
+    value: "TEST-ENV"
